# memobook.org

./: .auto-changelog  .env  .gitlab-ci.yml  .release-it.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  changelog.hbs  index.html  package-lock.json  package.json
.github/workflows/: main.yml
designs/: app-icon.afdesign
memobook.org/: index.html  package-lock.json  package.json  vite.config.ts
memobook.org/nginx/: nginx.conf
memobook.org/src/: App.vue  main.ts  router.ts  style.scss
memobook.org/src/assets/: bootstrap.scss  bootstrap.ts
memobook.org/src/components/: LightDarkSwitcher.vue
memobook.org/src/views/: Changelog.vue  Landing.vue
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/__tests__/: HelloWorld.spec.ts
src/components/common/: AppIcon.vue  LightDarkSwitcher.vue  ModalComponent.vue
src/components/layout/: FooterComponent.vue  HeaderComponent.vue  PageNotFound.vue
src/components/upload/: FileItem.vue
src/helpers/: api.ts  fetch-wrapper.ts
src/router/: index.ts
src/stores/: auth.store.ts
src/views/: AppView.vue  DashboardView.vue
src/views/meta/: AboutView.vue  AccountView.vue  ForgotView.vue  LoginView.vue  PrivacyView.vue  ResetView.vue  SignupView.vue  TermsView.vue
