[package]
name = "memobook"
version = "0.0.0"
description = "A simple file note app"
authors = [ "you" ]
license = ""
repository = ""
edition = "2021"

[build-dependencies.tauri-build]
version = "1.4"
features = [ ]

[dependencies]
serde_json = "1.0"

  [dependencies.tauri]
  version = "1.4"
  features = [ "dialog-message", "clipboard-all", "updater", "shell-open" ]

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

[features]
custom-protocol = [ "tauri/custom-protocol" ]
